--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,33 @@
-<html lang="en" ng-app="wiretap">
+<!DOCTYPE html>
+<html>
 <head>
+  <meta charset="utf-8">
   <title>Wiretap Server</title>
-  <script src="lib/angular/angular.min.js"></script>
-  <script src="js/app.js"></script>
-  <script src="js/controllers.js"></script>
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
- 
-  <div ng-view>
-    {{message}}
-  </div>
- 
+  <script type="text/x-handlebars">
+    <h2>Welcome to the Wiretap Server.</h2>
+
+    {{outlet}}
+  </script>
+
+  <script type="text/x-handlebars" id="index">
+    <ul>
+    {{#each user in model}}
+      <li>{{item}}</li>
+    {{/each}}
+    </ul>
+  </script>
+
+  <script src="js/libs/jquery-1.10.2.js"></script>
+  <script src="js/libs/ember-template-compiler-1.10.0.js"></script>
+  <script src="js/libs/ember-1.10.0.debug.js"></script>
+  <script src="js/libs/ember-data.min.js"></script>
+  <script src="js/app.js"></script>
+  <script src="js/models/users.js"></script>
+  <!-- to activate the test runner, add the "?test" query string parameter -->
+  <script src="tests/runner.js"></script>
 </body>
 </html>
